--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mochawesome": "^2.3.1"
   },
   "dependencies": {
+    "chai-subset": "^1.6.0",
     "superagent": "^3.6.0",
     "superagent-promise": "^1.1.0"
   }
